[FIX] nav bar size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
   box-shadow: 0px 7px 40px -1px rgba(0, 0, 0, 0.23);
   border: white;
 }
+@media (max-width: 778px) {
+  .heading__nav {
+    font-size: 1.8rem;
+    padding: 2.5% 0;
+  }
+}
 
 .__sub-title {
   text-align: center;
@@ -70,6 +76,12 @@ img {
   background-color: #eaeaea;
   text-align: center;
 }
+@media (max-width: 778px) {
+  .heading__localisation {
+    padding: 2% 0;
+    font-size: 1rem;
+  }
+}
 .heading__localisation .fa-solid {
   margin-right: 10px;
 }
@@ -103,6 +115,11 @@ img {
   padding: 0.5% 2%;
   counter-reset: tutoStep;
   list-style: none;
+}
+@media (max-width: 778px) {
+  .process ul {
+    flex-direction: column;
+  }
 }
 .process ul li {
   padding: 1.5% 2.7%;
