--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -6,4 +6,8 @@
     font-size: 2.5rem;
     box-shadow: 0px 7px 40px -1px rgba(0, 0, 0, 0.23);
     border: white;
+    @media (max-width: $phone) {
+        font-size: 1.8rem;
+        padding: 2.5% 0;
+    }
 }
