--- a/sass/layout/_localisation.scss
+++ b/sass/layout/_localisation.scss
@@ -3,6 +3,10 @@
     margin-top: 5px;
     background-color: #eaeaea;
     text-align: center;
+    @media (max-width: $phone) {
+        padding: 2% 0;
+        font-size: 1rem;
+    }
     .fa-solid {
         margin-right: 10px;
     }
