--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,5 +19,5 @@ $button-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
 
 // MEDIA
 
-$phone-break: 778px;
-$tablet-break: 992px;
+$phone: 778px;
+$tablet: 992px;
